--- a/RiftEffects/Main.storyboard
+++ b/RiftEffects/Main.storyboard
@@ -105,8 +105,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="812" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lgu-ZE-w9s" userLabel="Save">
+                                <rect key="frame" x="603" y="20" width="44" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="OK"/>
+                                <connections>
+                                    <action selector="upperSaveBtn:" destination="YDi-EF-p5k" eventType="touchUpInside" id="7Yn-et-fAD"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="362-y2-YVB" userLabel="Cancel">
+                                <rect key="frame" x="165" y="20" width="68.666666666666686" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="Cancel"/>
+                                <connections>
+                                    <action selector="cancelBtnAction:" destination="YDi-EF-p5k" eventType="touchUpInside" id="6bV-XQ-GNk"/>
+                                </connections>
+                            </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="czb-Qh-xUv">
-                                <rect key="frame" x="321.66666666666669" y="40" width="168.66666666666669" height="201"/>
+                                <rect key="frame" x="321.66666666666669" y="20" width="168.66666666666669" height="201"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Save" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W6X-jX-kBi">
                                         <rect key="frame" x="0.0" y="0.0" width="168.66666666666666" height="36"/>
@@ -194,39 +210,25 @@
                                     <constraint firstItem="3KB-2l-0gr" firstAttribute="leading" secondItem="AO9-l8-IAb" secondAttribute="leading" id="VAJ-hd-Nh3"/>
                                 </constraints>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lgu-ZE-w9s" userLabel="Save">
-                                <rect key="frame" x="603" y="20" width="44" height="31"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="tinted" title="OK"/>
-                                <connections>
-                                    <action selector="upperSaveBtn:" destination="YDi-EF-p5k" eventType="touchUpInside" id="7Yn-et-fAD"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="362-y2-YVB" userLabel="Cancel">
-                                <rect key="frame" x="165" y="20" width="68.666666666666686" height="31"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="tinted" title="Cancel"/>
-                                <connections>
-                                    <action selector="cancelBtnAction:" destination="YDi-EF-p5k" eventType="touchUpInside" id="6bV-XQ-GNk"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Lgu-ZE-w9s" firstAttribute="top" secondItem="dSV-Fg-Wru" secondAttribute="bottom" constant="20" id="335-zj-VaH"/>
-                            <constraint firstItem="czb-Qh-xUv" firstAttribute="top" secondItem="dSV-Fg-Wru" secondAttribute="bottom" constant="40" id="4go-oS-lsu"/>
-                            <constraint firstItem="czb-Qh-xUv" firstAttribute="centerX" secondItem="XQ0-Te-ZA5" secondAttribute="centerX" id="Fmr-w7-rUe"/>
+                            <constraint firstItem="eMG-JX-enb" firstAttribute="top" secondItem="czb-Qh-xUv" secondAttribute="bottom" constant="133" id="8Ui-ps-hKP"/>
+                            <constraint firstItem="czb-Qh-xUv" firstAttribute="top" secondItem="dSV-Fg-Wru" secondAttribute="bottom" constant="20" id="SM9-kv-hgo"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Lgu-ZE-w9s" secondAttribute="trailing" constant="105" id="mXu-wo-VIW"/>
-                            <constraint firstItem="W6X-jX-kBi" firstAttribute="top" secondItem="dSV-Fg-Wru" secondAttribute="bottom" constant="40" id="mgu-1C-nxN"/>
                             <constraint firstItem="362-y2-YVB" firstAttribute="top" secondItem="dSV-Fg-Wru" secondAttribute="bottom" constant="20" id="qJX-pi-Keg"/>
                             <constraint firstItem="362-y2-YVB" firstAttribute="leading" secondItem="XQ0-Te-ZA5" secondAttribute="leadingMargin" constant="105" id="sc9-TM-Aj0"/>
                             <constraint firstItem="Lgu-ZE-w9s" firstAttribute="top" secondItem="362-y2-YVB" secondAttribute="top" id="uBD-UX-mY5"/>
+                            <constraint firstItem="czb-Qh-xUv" firstAttribute="centerX" secondItem="XQ0-Te-ZA5" secondAttribute="centerX" id="wLk-NQ-JB1"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="albumLabel" destination="6kc-yr-k5U" id="oow-ce-YwO"/>
                         <outlet property="albumName" destination="3KB-2l-0gr" id="5qe-S4-ve7"/>
+                        <outlet property="bottomLayoutGuideConstraint" destination="8Ui-ps-hKP" id="Jny-gm-iDR"/>
                         <outlet property="saveDialogLabel" destination="W6X-jX-kBi" id="twa-eK-FG3"/>
+                        <outlet property="saveFieldsStack" destination="czb-Qh-xUv" id="HAS-fC-2jz"/>
                         <outlet property="stackName" destination="AO9-l8-IAb" id="ct6-wm-3In"/>
                         <outlet property="stackType" destination="rxm-hp-Xow" id="xo3-vX-l7I"/>
                         <outlet property="toPhotos" destination="QXP-zu-UEX" id="a7K-uz-uaZ"/>
