--- a/RiftEffects/Main.storyboard
+++ b/RiftEffects/Main.storyboard
@@ -115,34 +115,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="812" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="czb-Qh-xUv">
-                                <rect key="frame" x="321.66666666666669" y="20" width="168.66666666666669" height="201"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="czb-Qh-xUv">
+                                <rect key="frame" x="256" y="20" width="300" height="177.33333333333334"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Effect" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W6X-jX-kBi">
-                                        <rect key="frame" x="0.0" y="0.0" width="168.66666666666666" height="36"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="19.333333333333332"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lgu-ZE-w9s" userLabel="Save">
-                                        <rect key="frame" x="0.0" y="44" width="168.66666666666666" height="31"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" role="primary" translatesAutoresizingMaskIntoConstraints="NO" id="Lgu-ZE-w9s" userLabel="Save">
+                                        <rect key="frame" x="0.0" y="26.333333333333336" width="300" height="31"/>
+                                        <rect key="contentStretch" x="0.0" y="0.0" width="1" height="0.75"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="tinted" title="Save"/>
                                         <connections>
                                             <action selector="upperSaveBtn:" destination="YDi-EF-p5k" eventType="touchUpInside" id="7Yn-et-fAD"/>
                                         </connections>
                                     </button>
-                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ro6-H7-zN9">
-                                        <rect key="frame" x="0.0" y="83" width="168.66666666666666" height="20.333333333333329"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ro6-H7-zN9">
+                                        <rect key="frame" x="0.0" y="64.333333333333329" width="300" height="34"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TdO-gl-uUZ">
-                                                <rect key="frame" x="0.0" y="0.0" width="53.666666666666664" height="20.333333333333332"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TdO-gl-uUZ">
+                                                <rect key="frame" x="0.0" y="0.0" width="53.666666666666664" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="stackName" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AO9-l8-IAb">
-                                                <rect key="frame" x="61.666666666666629" y="0.0" width="107" height="20.333333333333332"/>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="stackName" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AO9-l8-IAb">
+                                                <rect key="frame" x="61.6666666666667" y="0.0" width="238.33333333333337" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                                 <connections>
@@ -151,17 +152,17 @@
                                             </textField>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="7MW-SY-SQ0">
-                                        <rect key="frame" x="0.0" y="111.33333333333334" width="168.66666666666666" height="20.333333333333343"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="7MW-SY-SQ0">
+                                        <rect key="frame" x="0.0" y="105.33333333333333" width="300" height="33.999999999999986"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Type:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IS7-L3-K0Q">
-                                                <rect key="frame" x="0.0" y="0.0" width="53.666666666666664" height="20.333333333333332"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Album:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6kc-yr-k5U">
+                                                <rect key="frame" x="0.0" y="0.0" width="53.666666666666664" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="stackType" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rxm-hp-Xow">
-                                                <rect key="frame" x="61.666666666666629" y="0.0" width="107" height="20.333333333333332"/>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="stackType" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rxm-hp-Xow">
+                                                <rect key="frame" x="61.6666666666667" y="0.0" width="238.33333333333337" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                                 <connections>
@@ -170,36 +171,17 @@
                                             </textField>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="JCX-sE-d2P">
-                                        <rect key="frame" x="0.0" y="139.66666666666666" width="168.66666666666666" height="22.333333333333343"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="cHw-Zc-Do4">
+                                        <rect key="frame" x="0.0" y="146.33333333333334" width="300" height="31"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Album:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6kc-yr-k5U">
-                                                <rect key="frame" x="0.0" y="0.0" width="53.666666666666664" height="22.333333333333332"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To Photos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qWU-Gu-8h2">
+                                                <rect key="frame" x="0.0" y="0.0" width="243" height="31"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="AlbumName" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3KB-2l-0gr">
-                                                <rect key="frame" x="61.666666666666629" y="0.0" width="107" height="22.333333333333332"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                                <connections>
-                                                    <action selector="albumNameEditChange:" destination="YDi-EF-p5k" eventType="editingChanged" id="qUF-k3-avy"/>
-                                                </connections>
-                                            </textField>
-                                        </subviews>
-                                    </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="cHw-Zc-Do4">
-                                        <rect key="frame" x="0.0" y="170" width="168.66666666666666" height="31"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="To Photos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qWU-Gu-8h2">
-                                                <rect key="frame" x="0.0" y="0.0" width="111.66666666666667" height="31"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" title="To Photos" translatesAutoresizingMaskIntoConstraints="NO" id="QXP-zu-UEX">
-                                                <rect key="frame" x="119.66666666666663" y="0.0" width="51" height="31"/>
+                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" title="To Photos" translatesAutoresizingMaskIntoConstraints="NO" id="QXP-zu-UEX">
+                                                <rect key="frame" x="251" y="0.0" width="51" height="31"/>
                                                 <connections>
                                                     <action selector="storeToLibEdit:" destination="YDi-EF-p5k" eventType="valueChanged" id="d1F-15-RwF"/>
                                                 </connections>
@@ -209,32 +191,28 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="rxm-hp-Xow" firstAttribute="leading" secondItem="AO9-l8-IAb" secondAttribute="leading" id="Boh-Cp-m2N"/>
-                                    <constraint firstItem="3KB-2l-0gr" firstAttribute="leading" secondItem="AO9-l8-IAb" secondAttribute="leading" id="VAJ-hd-Nh3"/>
+                                    <constraint firstAttribute="width" constant="300" id="sOI-tZ-HBl"/>
                                 </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="eMG-JX-enb" firstAttribute="top" secondItem="czb-Qh-xUv" secondAttribute="bottom" constant="133" id="8Ui-ps-hKP"/>
-                            <constraint firstItem="czb-Qh-xUv" firstAttribute="top" secondItem="dSV-Fg-Wru" secondAttribute="bottom" constant="20" id="SM9-kv-hgo"/>
-                            <constraint firstItem="czb-Qh-xUv" firstAttribute="centerX" secondItem="XQ0-Te-ZA5" secondAttribute="centerX" id="wLk-NQ-JB1"/>
+                            <constraint firstItem="czb-Qh-xUv" firstAttribute="top" secondItem="dSV-Fg-Wru" secondAttribute="bottom" constant="20" id="9gc-Gg-AKb"/>
+                            <constraint firstItem="czb-Qh-xUv" firstAttribute="centerX" secondItem="XQ0-Te-ZA5" secondAttribute="centerX" id="Gy4-1H-z6Y"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="albumLabel" destination="6kc-yr-k5U" id="oow-ce-YwO"/>
-                        <outlet property="albumName" destination="3KB-2l-0gr" id="5qe-S4-ve7"/>
-                        <outlet property="bottomLayoutGuideConstraint" destination="8Ui-ps-hKP" id="Jny-gm-iDR"/>
                         <outlet property="saveDialogLabel" destination="W6X-jX-kBi" id="twa-eK-FG3"/>
                         <outlet property="saveFieldsStack" destination="czb-Qh-xUv" id="HAS-fC-2jz"/>
                         <outlet property="stackName" destination="AO9-l8-IAb" id="ct6-wm-3In"/>
                         <outlet property="stackType" destination="rxm-hp-Xow" id="xo3-vX-l7I"/>
                         <outlet property="toPhotos" destination="QXP-zu-UEX" id="a7K-uz-uaZ"/>
-                        <outlet property="topLayoutGuideConstraint" destination="SM9-kv-hgo" id="zQO-LH-zk8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZuT-QU-bAw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="265" y="-1858"/>
+            <point key="canvasLocation" x="263.79310344827587" y="-1858.4000000000001"/>
         </scene>
         <!--Pop Up Filter Info-->
         <scene sceneID="S2x-Qf-bsL">
